update exam.js,